scrollbar: fix locking mechanism

--- a/src/scss/widgets/containers.scss
+++ b/src/scss/widgets/containers.scss
@@ -25,6 +25,7 @@
 
     > inner {
         overflow: auto;
+        scroll-behavior: auto!important; // smooth mode breaks scrollbar widget
     }
 
 
